[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "xagent"
version = "0.0.1"
[tool.setuptools.packages]
find = {}
[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
dataset_info = ["*.json", "*.csv"]
XAgent = ["*.json", "*.csv"]